--- a/templates/updateProjects.html
+++ b/templates/updateProjects.html
@@ -12,19 +12,19 @@
     <h2>"Select" the table (it's for the code): </h2>
     <h2>Set</h2>
     <select name = "i2">
-      <option attribute = "Project">Project</option>
-      <option attribute = "Department">Department</option>
-      <option attribute = "ProjectLeader">Project Leader</option>
-      <option attribute = "Status">Project Status</option>
+      <option value = "Project">Project</option>
+      <option value = "Department">Department</option>
+      <option value = "ProjectLeader">Project Leader</option>
+      <option value = "Status">Project Status</option>
     </select>
     <h2>As:</h2>
         <input type="text" name = "new">  
     <h2>For</h2>
     <select name = "i4">
-      <option attribute = "Project">Project</option>
-      <option attribute = "Department">Department</option>
-      <option attribute = "ProjectLeader">Project Leader</option>
-      <option attribute = "Status">Project Status</option>
+      <option value = "Project">Project</option>
+      <option value = "Department">Department</option>
+      <option value = "ProjectLeader">Project Leader</option>
+      <option value = "Status">Project Status</option>
     </select>
     <h2>Equaling:</h2>
         <input type="text" name = "old">
