--- a/templates/deleteEmployeeProjects.html
+++ b/templates/deleteEmployeeProjects.html
@@ -11,11 +11,11 @@
  <form action = "{{ url_for('deleteEmpProj') }}" method="post">
      <h2>Delete Employee Project with</h2>
          <select name = "att">
-              <option attribute = "EmployeeID">Employee ID</option>
-              <option attribute = "Project">Project</option>
-              <option attribute = "Role">Role</option>
-              <option attribute = "StartDate">Start Date (yyyy-mm-dd)</option>
-              <option attribute = "EndDate">End Date (yyyy-mm-dd)</option>
+              <option value = "EmployeeID">Employee ID</option>
+              <option value = "Project">Project</option>
+              <option value = "Role">Role</option>
+              <option value = "StartDate">Start Date (yyyy-mm-dd)</option>
+              <option value = "EndDate">End Date (yyyy-mm-dd)</option>
          </select>
      <h2>Equaling:</h2>
          <input type="text" placeholder="0" name="old">
