--- a/templates/updatePositions.html
+++ b/templates/updatePositions.html
@@ -12,17 +12,17 @@
      <h2>Update Positions:</h2>
      <h2>Set</h2>
          <select name = "i2">
-            <option attribute = "Position">position</option>
-            <option attribute = "minSalary">mininimum salary</option>
-            <option attribute = "maxSalary">maximum salary</option>
+            <option value = "Position">position</option>
+            <option value = "minSalary">mininimum salary</option>
+            <option value = "maxSalary">maximum salary</option>
          </select>
      <h2>As:</h2>
          <input type="text" name="new">
      <h2>Replacing</h2>
          <select name = "i4">
-            <option attribute = "Position">position</option>
-            <option attribute = "minSalary">mininimum salary</option>
-            <option attribute = "maxSalary">maximum salary</option>
+            <option value = "Position">position</option>
+            <option value = "minSalary">mininimum salary</option>
+            <option value = "maxSalary">maximum salary</option>
          </select>
      <h2>Equaling:</h2>
         <input type="text" name="old">
