--- a/templates/deleteProjects.html
+++ b/templates/deleteProjects.html
@@ -11,10 +11,10 @@
 <form action = "{{ url_for('deleteProj') }}" method="post">
     <h2>Delete Project with</h2>
     <select name = "att">
-      <option attribute = "Project">Project</option>
-      <option attribute = "Department">Department</option>
-      <option attribute = "ProjectLeader">Project Leader</option>
-      <option attribute = "Status">Project Status</option>
+      <option value = "Project">Project</option>
+      <option value = "Department">Department</option>
+      <option value = "ProjectLeader">Project Leader</option>
+      <option value = "Status">Project Status</option>
     </select>
     <h2>Equaling:</h2>
         <input type="text" placeholder="0" name = "old">  
