--- a/templates/deletePositions.html
+++ b/templates/deletePositions.html
@@ -12,9 +12,9 @@
      <h2>Delete Position: </h2>
      <h2>With</h2>
          <select name = "att">
-            <option attribute = "Position">position</option>
-            <option attribute = "minSalary">mininimum salary</option>
-            <option attribute = "maxSalary">maximum salary</option>
+            <option value = "Position">position</option>
+            <option value = "minSalary">mininimum salary</option>
+            <option value = "maxSalary">maximum salary</option>
          </select>
      <h2>Equaling:</h2>
          <input type="text" name="input">
