--- a/templates/deleteEmployeeInfo.html
+++ b/templates/deleteEmployeeInfo.html
@@ -11,20 +11,20 @@
  <form action = "{{ url_for('deleteEmpInfo') }}" method="post">
      <h2>Delete Employee with</h2>
          <select name = "att">
-          <option attribute = "EmployeeID">Employee ID</option>
-          <option attribute = "SSN">SSN</option>
-          <option attribute = "Name">Name</option>
-          <option attribute = "Gender">Gender</option>
-          <option attribute = "DoB">Birthdate (yyyy-mm-dd)</option>
-          <option attribute = "PrimaryAddress">Primary Address</option>
-          <option attribute = "PhoneNumber">Phone Number</option>
-          <option attribute = "HighestDegree">Highest Degree</option>
-          <option attribute = "YearsExperience">Years Experience</option>
-          <option attribute = "HiringPosition">Hiring Position</option>
-          <option attribute = "HiringSalary">Hiring Salary</option>
-          <option attribute = "CurrentPosition">Current Position</option>
-          <option attribute = "CurrentSalary">Current Salary</option>
-          <option attribute = "Coverage">Health Insurance Coverage</option>
+          <option value = "EmployeeID">Employee ID</option>
+          <option value = "SSN">SSN</option>
+          <option value = "Name">Name</option>
+          <option value = "Gender">Gender</option>
+          <option value = "DoB">Birthdate (yyyy-mm-dd)</option>
+          <option value = "PrimaryAddress">Primary Address</option>
+          <option value = "PhoneNumber">Phone Number</option>
+          <option value = "HighestDegree">Highest Degree</option>
+          <option value = "YearsExperience">Years Experience</option>
+          <option value = "HiringPosition">Hiring Position</option>
+          <option value = "HiringSalary">Hiring Salary</option>
+          <option value = "CurrentPosition">Current Position</option>
+          <option value = "CurrentSalary">Current Salary</option>
+          <option value = "Coverage">Health Insurance Coverage</option>
          </select>
      <h2>Equaling:</h2>
          <input type="text" name="old">
