--- a/templates/deleteEmployeeAssignments.html
+++ b/templates/deleteEmployeeAssignments.html
@@ -11,10 +11,10 @@
  <form action = "{{ url_for('deleteEmpDep') }}" method="post">
      <h2>Delete Employee Assignment with</h2>
          <select name = "att">
-          <option attribute = "EmployeeID">Employee ID</option>
-          <option attribute = "Department">Department</option>
-          <option attribute = "StartDate">Start Date (yyyy-mm-dd)</option>
-          <option attribute = "EndDate">End Date (yyyy-mm-dd)</option>
+          <option value = "EmployeeID">Employee ID</option>
+          <option value = "Department">Department</option>
+          <option value = "StartDate">Start Date (yyyy-mm-dd)</option>
+          <option value = "EndDate">End Date (yyyy-mm-dd)</option>
          </select>
      <h2>Equaling:</h2>
          <input type="text" name="old">
