Changed wording for query15

--- a/templates/query15.html
+++ b/templates/query15.html
@@ -9,9 +9,9 @@
 <div>
 <h2>Add: </h2>
 <form action = "{{ url_for('query15') }}" method="post">
-   <p>Please enter the role:</p>
+   <p>Please enter the position:</p>
    <input type="text" name="i1"/> <br>
-   <p>Please enter the level:</p>
+   <p>Please enter the years of experience:</p>
    <input type="text" name="i2"/> <br>
     <button type="submit">Finalize selection</button>
 </form>
